<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".ProfileActivity">

    <!-- Username TextView -->

<!--    Username of the user-->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hi_there"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:contentDescription="@string/username_description" />

    <!-- Profession TextView -->
    <TextView
        android:id="@+id/professionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="4dp"
        android:text="@string/profession"/>

    <!-- Experience TextView -->
    <TextView
        android:id="@+id/experienceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="4dp"
        android:text="@string/experience"/>

    <!-- Hourly Rate TextView -->
    <TextView
        android:id="@+id/hourlyRateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="4dp"
        android:text="@string/hourly_rate"/>

    <!-- Email TextView -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="16dp"
        android:text="@string/email" />

    <!-- Profile Picture ImageView -->
    <ImageView
        android:id="@+id/profilePictureImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profilepictureimageview_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo" />

    <!-- Back to MainActivity Button -->
    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="16dp"/>

</LinearLayout>
